# openapi/openapi.yaml
@@ -796,7 +796,7 @@ components:
           minimum: 1
         refresh_interval_sec:
           type: integer
-          minimum: 60
+          minimum: 10
 
     Job:
       type: object
@@ -855,7 +855,7 @@ components:
           nullable: true
         refresh_interval_sec:
           type: integer
-          minimum: 60
+          minimum: 10
         max_retries:
           type: integer
           minimum: 0
@@ -920,7 +920,7 @@ components:
           nullable: true
         refresh_interval_sec:
           type: integer
-          minimum: 60
+          minimum: 10
         max_retries:
           type: integer
           minimum: 0
@@ -969,7 +969,7 @@ components:
           nullable: true
         refresh_interval_sec:
           type: integer
-          minimum: 60
+          minimum: 10
         max_retries:
           type: integer
           minimum: 0
